--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
+
+@theme {
+    --font-headline:"Mukta", sans-serif;
+    --font-inter:"Inter", sans-serif;
+}
