--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,7 @@
 @theme {
     --font-headline:"Mukta", sans-serif;
     --font-inter:"Inter", sans-serif;
+
+    --animate-wiggle: wiggle 1s ease-in-out infinite;
+    @keyframes wiggle {    0%,    100% {      transform: rotate(-0.6deg);    }    50% {      transform: rotate(0.6deg);    }  }
 }
