video card done

--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,10 @@
     background-color: #737070;
     border-radius: 10px;
 }
-
+/* Tailwind classes for clamping */
+.line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
